Updated from Andrew Repo

--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -12,8 +12,8 @@ body {
 }
 
 .card {
-  border: 3px solid #99aab5;
-  background-color: #f4f4f5;
+  /* border: 3px solid #99aab5; */
+  /* background-color: #f4f4f5; */
   margin: 35px;
 }
 
